--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,8 @@ LINK_DIRECTORIES(
 ADD_EXECUTABLE(vrp main.cc vrp.cc)
 TARGET_LINK_LIBRARIES(vrp lemon)
 
+ADD_EXECUTABLE(debug debug.cc)
+TARGET_LINK_LIBRARIES(debug lemon)
+
 #ADD_EXECUTABLE(in_gen input_generator.cc)
 #TARGET_LINK_LIBRARIES(in_gen lemon)
