correct errors new columns's <=1 constraint error q[0]!=0 error things to do: speed up first column add, branch and bound

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,8 @@ TARGET_LINK_LIBRARIES(vrp lemon)
 ADD_EXECUTABLE(debug debug.cc)
 TARGET_LINK_LIBRARIES(debug lemon)
 
+ADD_EXECUTABLE(clp clp.cc)
+TARGET_LINK_LIBRARIES(clp lemon)
+
 #ADD_EXECUTABLE(in_gen input_generator.cc)
 #TARGET_LINK_LIBRARIES(in_gen lemon)
