branch on arc finish corrections, modifications

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,8 @@ LINK_DIRECTORIES(
 ADD_EXECUTABLE(vrp main.cc vrp.cc)
 TARGET_LINK_LIBRARIES(vrp lemon)
 
-ADD_EXECUTABLE(debug debug.cc)
-TARGET_LINK_LIBRARIES(debug lemon)
-
-ADD_EXECUTABLE(clp clp.cc)
-TARGET_LINK_LIBRARIES(clp lemon)
+ADD_EXECUTABLE(new_debug new_debug.cc)
+TARGET_LINK_LIBRARIES(new_debug lemon)
 
 #ADD_EXECUTABLE(in_gen input_generator.cc)
 #TARGET_LINK_LIBRARIES(in_gen lemon)
